# AlphaGomoku

./: .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  todo_list.md
doc/: protocols.aux  protocols.out  protocols.tex  protocols.toc
doc/protocols/: protocols.aux  protocols.out  protocols.tex  protocols.toc
doc/user_manual/: user_manual.aux  user_manual.out  user_manual.tex  user_manual.toc
include/alphagomoku/: configs.hpp  version.hpp
include/alphagomoku/ab_search/: ActionList.hpp  AlphaBetaSearch.hpp  CommonBase.hpp  FastHashFunction.hpp  KillerHeuristic.hpp  LocalHashTable.hpp  MinimaxSearch.hpp  MoveGenerator.hpp  Score.hpp  SharedHashTable.hpp  StaticSolver.hpp
include/alphagomoku/dataset/: CompressedFloat.hpp  Dataset.hpp  GameDataBuffer.hpp  GameDataStorage.hpp  Sampler.hpp  SearchDataStorage.hpp  SearchDataStorage_v2.hpp  data_packs.hpp  torch_api.h
include/alphagomoku/evaluation/: EvaluationGame.hpp  EvaluationManager.hpp  EvaluationThread.hpp  Player.hpp  TwoMatch.hpp
include/alphagomoku/game/: Board.hpp  Game.hpp  Move.hpp  rules.hpp
include/alphagomoku/mcts/: Cache.hpp  Edge.hpp  EdgeGenerator.hpp  EdgePool.hpp  EdgeSelector.hpp  EvaluationQueue.hpp  EvaluationRequest.hpp  Move.hpp  NNEvaluator.hpp  Node.hpp  NodeCache.hpp  Search.hpp  SearchTask.hpp  SearchTrajectory.hpp  Tree.hpp  TreePolicy.hpp  Value.hpp  ZobristHashing.hpp
include/alphagomoku/networks/: AGNetwork.hpp  MovesLeftNetwork.hpp  NNInputFeatures.hpp  NNTask.hpp  NNUE.hpp  NetworkDataPack.hpp  blocks.hpp  networks.hpp  perf_stats.hpp
launcher/: launcher.cpp
player_launcher/: argument_parser.cpp  argument_parser.hpp  benchmark.cpp  configuration.cpp  configuration.hpp  engine_manager.cpp  engine_manager.hpp  launcher.cpp
sandbox_launcher/: launcher.cpp
scripts/: build_all.sh  build_lib.py  prepare_release.py  utils.py  windows_build_all.bat  wykres.py
src/: configs.cpp  game_rules.cpp
src/ab_search/: AlphaBetaSearch.cpp  MinimaxSearch.cpp  MoveGenerator.cpp  StaticSolver.cpp
src/dataset/: CMakeLists.txt  Dataset.cpp  GameDataBuffer.cpp  GameDataStorage.cpp  Sampler.cpp  SearchDataStorage.cpp  SearchDataStorage_v2.cpp  data_packs.cpp  torch_api.cpp
src/evaluation/: CMakeLists.txt  EvaluationGame.cpp  EvaluationManager.cpp  EvaluationThread.cpp  Player.cpp  TwoMatch.cpp
src/game/: Board.cpp  CMakeLists.txt  Game.cpp  Move.cpp  rules.cpp
src/mcts/: Cache.cpp  Edge.cpp  EdgeGenerator.cpp  EdgePool.cpp  EdgeSelector.cpp  EvaluationQueue.cpp  EvaluationRequest.cpp  Move.cpp  NNEvaluator.cpp  Node.cpp  NodeCache.cpp  Search.cpp  SearchTask.cpp  SearchTrajectory.cpp  Tree.cpp  TreePolicy.cpp  Value.cpp  ZobristHashing.cpp
src/networks/: AGNetwork.cpp  CMakeLists.txt  MovesLeftNetwork.cpp  NNInputFeatures.cpp  NNUE.cpp  NetworkDataPack.cpp  blocks.cpp  networks.cpp  perf_stats.cpp
src/networks/nnue_ops/: avx2_ops.cpp  def_ops.cpp  layers.cpp  sse41_ops.cpp
src/patterns/: CMakeLists.txt  DefensiveMoveFinder.cpp  DefensiveMoveTable.cpp  PatternCalculator.cpp  PatternCalculator_v2.cpp  PatternClassifier.cpp  PatternTable.cpp  PatternTable_v2.cpp  ThreatTable.cpp
src/player/: CMakeLists.txt  EngineController.cpp  EngineManager.cpp  EngineSettings.cpp  GomocupPlayer.cpp  PlayerManager.cpp  ProgramManager.cpp  ResourceManager.cpp  SearchEngine.cpp  SearchThread.cpp  TimeManager.cpp  benchmark.cpp  communication.cpp  configuration.cpp
src/protocols/: CMakeLists.txt  ExtendedGomocupProtocol.cpp  GomocupProtocol.cpp  Protocol.cpp  YixinBoardProtocol.cpp
src/rules/: Line.cpp  caro.cpp  freestyle.cpp  game_rules.cpp  renju.cpp  standard.cpp
src/search/: CMakeLists.txt  Score.cpp  Value.cpp  ZobristHashing.cpp
src/selfplay/: AGNetwork.cpp  CMakeLists.txt  EvaluationGame.cpp  EvaluationManager.cpp  Game.cpp  GameBuffer.cpp  GameGenerator.cpp  GeneratorManager.cpp  NNInputFeatures.cpp  NetworkLoader.cpp  OpeningGenerator.cpp  SearchData.cpp  SupervisedLearning.cpp  TrainingManager.cpp  TrainingManager.hpp
src/solver/: FastPolicy.cpp  FeatureClassifier.cpp  PatternCalculator.cpp  PatternTable.cpp  ThreatTable.cpp  VCTSolver.cpp
src/tss/: CMakeLists.txt  SimpleEvaluator.cpp  ThreatGenerator.cpp  ThreatSpaceSearch.cpp
src/tuning/: CMakeLists.txt  GSPRT.cpp  SPSA.cpp
src/utils/: ArgumentParser.cpp  CMakeLists.txt  Logger.cpp  ThreadPool.cpp  argument_parser.cpp  augmentations.cpp  configs.cpp  file_util.cpp  game_rules.cpp  misc.cpp  os_utils.cpp  random.cpp  selfcheck.cpp  statistics.cpp
src/vcf_solver/: FastPolicy.cpp  FeatureExtractor.cpp  FeatureExtractor_v2.cpp  FeatureExtractor_v3.cpp  FeatureTable.cpp  FeatureTable_v2.cpp  FeatureTable_v3.cpp  ThreatTable.cpp  VCFSolver.cpp  VCFSolver_v3.cpp  VCTSolver.cpp
test/: CMakeLists.txt  test_launcher.cpp
test/ab_search/: test_defensive_moves.cpp  test_move_generator.cpp
test/dataset/: test_CompressedFloat.cpp
test/game/: test_Board.cpp  test_Move.cpp  test_caro.cpp  test_freestyle.cpp  test_renju.cpp  test_standard.cpp
test/mcts/: test_Cache.cpp  test_Edge.cpp  test_Move.cpp  test_Node.cpp  test_NodeCache.cpp  test_SearchTask.cpp  test_Tree.cpp  test_ZobristHashing.cpp
test/networks/: test_NNInputFeatures.cpp
test/player/: test_GomocupPlayer.cpp  test_argument_parser.cpp
test/protocols/: test_ExtendedGomocupProtocol.cpp  test_GomocupProtocol.cpp  test_protocol.cpp
test/rules/: test_Line.cpp  test_caro.cpp  test_freestyle.cpp  test_renju.cpp  test_rules.cpp  test_rules.hpp  test_standard.cpp
test/search/: test_Score.cpp  test_ZobristHashing.cpp
test/search/alpha_beta/: test_SharedHashTable.cpp  test_move_generator.cpp
test/search/monte_carlo/: test_Edge.cpp  test_Node.cpp  test_NodeCache.cpp  test_SearchTask.cpp
test/solver/: test_pattern_table.cpp  test_static_solver.cpp
test/training/dataset/: test_CompressedFloat.cpp
test/utils/: test_ArgumentParser.cpp  test_argument_parser.cpp  test_augmentations.cpp  test_configs.cpp  test_file_util.cpp  test_misc.cpp
training/: launcher.cpp
training_launcher/: launcher.cpp
tuning_launcher/: launcher.cpp
(+214 files in other folders)
